<resources>
    <string name="app_name">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="detail_error_message">Data not found</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_favorite_success">Added to Favorite List</string>
    <string name="unfavorite">Remove from Favorite List</string>
    <string name="unfavorite_success">Removed from Favorite List</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
