<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="0dp"
                    android:layout_height="280dp"
                    android:layout_weight="1"
                    android:paddingLeft="0dp"
                    android:paddingStart="0dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:scaleType="fitStart" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" />

                    <TextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"/>

                    <Button
                        android:id="@+id/favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_favorite"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tv_trailer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator_detail"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</layout>
